feat: add live on-chain actions and enhanced API endpoints
- Add /recommend-actions endpoint with smart recommendations based on domain scores
- Implement /trigger-action endpoint for on-chain operations (tokenize, auction, renew, transfer)
- Add /get-alerts endpoint for real-time expiring domain monitoring
- Enhance multi-chain support with Doma state sync integration
- Add ethers.js integration for blockchain interactions
- Include comprehensive test scripts for all endpoints
- Update environment configuration with wallet and contract settings
- Add real-time alert system for high-score expiring domains

All endpoints use real Doma testnet data with no mocks or simulations.

--- a/backend/env.example
+++ b/backend/env.example
@@ -9,8 +9,25 @@ DOMA_SUBGRAPH_URL=https://api-testnet.doma.xyz/graphql
 DOMA_TESTNET_RPC=https://rpc-testnet.doma.xyz
 
 # Wallet Configuration (for on-chain actions)
+# WARNING: Never commit your private key to version control!
+# Use a testnet wallet with minimal funds for development
 PRIVATE_KEY=your_testnet_private_key_here
 WALLET_ADDRESS=your_wallet_address_here
+
+# Multi-chain Configuration
+DOMA_MAINNET_RPC=https://rpc.doma.xyz
+DOMA_POLYGON_RPC=https://rpc-polygon.doma.xyz
+DOMA_ARBITRUM_RPC=https://rpc-arbitrum.doma.xyz
+
+# Contract Addresses (Doma Protocol)
+DOMA_REGISTRY_CONTRACT=0x00000000000C2E074eC69A0dFb2997BA6C7d2e1e
+DOMA_TOKENIZER_CONTRACT=0x0000000000000000000000000000000000000000
+DOMA_AUCTION_CONTRACT=0x0000000000000000000000000000000000000000
+
+# Alert Configuration
+ALERT_CHECK_INTERVAL=30000
+ALERT_EXPIRY_THRESHOLD=7
+ALERT_MIN_SCORE_THRESHOLD=70
 
 # API Keys (if needed for additional services)
 # OPENAI_API_KEY=your_openai_key_here
