--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,22 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["doma", "domain", "ai", "scoring", "analytics", "defi", "blockchain"],
+  "keywords": [
+    "doma",
+    "domain",
+    "ai",
+    "scoring",
+    "analytics",
+    "defi",
+    "blockchain"
+  ],
   "author": "DomaInsight Team",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
+    "ethers": "^6.15.0",
     "express": "^5.1.0",
     "ml-random-forest": "^2.1.0"
   },
