--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "start:frontend": "cd frontend && npm start",
     "start:dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "build": "cd frontend && npm run build",
-    "test": "cd backend && npm test && cd ../frontend && npm test"
+    "test": "cd backend && npm test && cd ../frontend && npm test",
+    "test:api": "node test-api.js",
+    "test:e2e": "node test-e2e.js",
+    "test:live": "node test-live.js",
+    "deploy:backend": "chmod +x deploy-backend.sh && ./deploy-backend.sh",
+    "deploy:frontend": "chmod +x deploy-frontend.sh && ./deploy-frontend.sh"
   },
   "keywords": [
     "doma",
@@ -33,7 +38,9 @@
   },
   "homepage": "https://github.com/yourusername/DomaInsight-Hackathon#readme",
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "axios": "^1.11.0",
+    "concurrently": "^8.2.2",
+    "puppeteer": "^24.19.0"
   },
   "engines": {
     "node": ">=16.0.0",
