Add end-to-end testing with Puppeteer

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:e2e": "jest --testPathPattern=tests/test-e2e.js --detectOpenHandles --forceExit",
+    "test:e2e:watch": "jest --testPathPattern=tests/test-e2e.js --watch --detectOpenHandles",
+    "test:e2e:ci": "jest --testPathPattern=tests/test-e2e.js --ci --detectOpenHandles --forceExit",
     "eject": "react-scripts eject",
     "dev": "react-scripts start"
   },
@@ -50,7 +53,15 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "jest": "^29.7.0",
+    "jest-puppeteer": "^9.0.0",
     "postcss": "^8.5.6",
+    "puppeteer": "^21.0.0",
     "tailwindcss": "^4.1.13"
+  },
+  "jest": {
+    "preset": "jest-puppeteer",
+    "testTimeout": 30000,
+    "setupFilesAfterEnv": ["<rootDir>/tests/setup.js"]
   }
 }
