--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,21 +1,33 @@
+# Fly.io configuration for DomaInsight backend
 app = "domainsight-backend"
-primary_region = "iad"
+primary_region = "sjc"
 
 [build]
+  dockerfile = "Dockerfile"
 
 [env]
   NODE_ENV = "production"
-  PORT = "8080"
+  PORT = "3000"
 
 [http_service]
-  internal_port = 8080
+  internal_port = 3000
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  max_machines_running = 1
+
+  [[http_service.checks]]
+    grace_period = "10s"
+    interval = "30s"
+    method = "GET"
+    timeout = "5s"
+    path = "/health"
 
 [[vm]]
   cpu_kind = "shared"
   cpus = 1
   memory_mb = 256
+
+[deploy]
+  release_command = "echo 'DomaInsight backend deployed successfully'"
