--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "deploy": "flyctl deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
