--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "cd backend && npm test && cd ../frontend && npm test",
     "test:api": "node test-api.js",
     "test:e2e": "node test-e2e.js",
-    "test:live": "node test-live.js",
+    "test:live": "node tests/test-live.js",
     "deploy:backend": "chmod +x deploy-backend.sh && ./deploy-backend.sh",
     "deploy:frontend": "chmod +x deploy-frontend.sh && ./deploy-frontend.sh"
   },
