--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,15 +54,17 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "jest": "^29.7.0",
-    "jest-puppeteer": "^9.0.0",
+    "jest": "^30.1.3",
+    "jest-puppeteer": "^11.0.0",
     "postcss": "^8.5.6",
-    "puppeteer": "^21.0.0",
+    "puppeteer": "^24.20.0",
     "tailwindcss": "^4.1.13"
   },
   "jest": {
     "preset": "jest-puppeteer",
     "testTimeout": 30000,
-    "setupFilesAfterEnv": ["<rootDir>/tests/setup.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.js"
+    ]
   }
 }
