--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   "devDependencies": {
     "axios": "^1.11.0",
     "concurrently": "^8.2.2",
-    "puppeteer": "^24.19.0"
+    "jest": "^30.1.3",
+    "puppeteer": "^24.20.0"
   },
   "engines": {
     "node": ">=16.0.0",
